Fixed erradic sidebar jumping

--- a/CodeSaw.Web/frontend/layout.less
+++ b/CodeSaw.Web/frontend/layout.less
@@ -16,7 +16,7 @@ html, body, #content {
     margin-top: 0em;
     margin-left: 1em !important;
     margin-right: 1em !important;
-    margin-bottom: 2em;
+    margin-bottom: 0;
 }
 
 .logo {
